// Copyright (c) farm-ng, inc.
//
// Use of this source code is governed by an MIT-style
// license that can be found in the LICENSE file or at
// https://opensource.org/licenses/MIT.

syntax = "proto3";

import "farm_ng/core/uri.proto";
import "farm_ng/core/timestamp.proto";

package farm_ng.core.proto;

message Event {
  Uri uri = 1;
  repeated Timestamp timestamps = 2;
  int64 payload_length = 3;
}

// TODO(edgar): remove after transition to new setup
message EventHeader {
  string robot_name = 1;
}
